2010-09-15  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] sort testing methods in DRT
        https://bugs.webkit.org/show_bug.cgi?id=45850

        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::EventSender):
        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        * DumpRenderTree/chromium/TextInputController.cpp:
        (TextInputController::TextInputController):

2010-09-15  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Adam Barth.

        CQ status shows items out of order
        https://bugs.webkit.org/show_bug.cgi?id=45846
        
        Only group consecutive status items with the same patch ID into the same
        group, so that overall item ordering is preserved.
        
        Also don't indent status items that only have a single item in their
        group.

        * QueueStatusServer/handlers/queuestatus.py:
        * QueueStatusServer/templates/includes/singlequeuestatus.html: Added.
        * QueueStatusServer/templates/queuestatus.html:

2010-09-15  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Add queue start/stop messages
        https://bugs.webkit.org/show_bug.cgi?id=45853

        I ended up needing to clean up a bunch of our unit testing
        in order to test this new code path nicely.

        There are also a few PEP8 changes needed to pass check-webkit-style.

        * Scripts/webkitpy/tool/bot/queueengine.py:
        * Scripts/webkitpy/tool/bot/queueengine_unittest.py:
        * Scripts/webkitpy/tool/commands/earlywarningsystem_unittest.py:
        * Scripts/webkitpy/tool/commands/queues.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:
        * Scripts/webkitpy/tool/commands/queuestest.py:
        * Scripts/webkitpy/tool/commands/sheriffbot_unittest.py:

2010-09-15  Simon Fraser  <simon.fraser@apple.com>
