@@ -1,3 +1,13 @@
+2010-09-10  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        deduplicate-tests should be runnable from any WebKit directory
+        https://bugs.webkit.org/show_bug.cgi?id=44709
+
+        * Scripts/webkitpy/layout_tests/deduplicate_tests.py:
+        * Scripts/webkitpy/layout_tests/deduplicate_tests_unittest.py:
+
 2010-09-15  Tony Chang  <tony@chromium.org>
 
         Reviewed by Kent Tamura.
